--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -2683,6 +2683,17 @@ footer {
   }
 }
 
+.proposals-list {
+
+  @include breakpoint(medium) {
+    min-height: $line-height * 15;
+
+    .with-image > .row {
+      display: flex;
+    }
+  }
+}
+
 // 11. Polls
 // --------------------
 
